--- a/apps/site/src/_pages/docs/1_developing-blocks.mdx
+++ b/apps/site/src/_pages/docs/1_developing-blocks.mdx
@@ -184,7 +184,8 @@ const { data, errors } = await graphModule.updateEntity({
     entityId: blockEntity.metadata.recordId.entityId,
     entityTypeId: blockEntity.metadata.entityTypeId,
     properties: {
-      "https://blockprotocol.org/@blockprotocol/types/property-type/name/": "Bob",
+      "https://blockprotocol.org/@blockprotocol/types/property-type/name/":
+        "Bob",
     },
   },
 });
@@ -207,7 +208,8 @@ this.updateSelfProperties({
 Because properties are identified by URLs, you may wish to alias them in your code if used in multiple places. For example:
 
 ```js
-const nameKey = "https://blockprotocol.org/@blockprotocol/types/property-type/name/";
+const nameKey =
+  "https://blockprotocol.org/@blockprotocol/types/property-type/name/";
 
 if (blockEntity.properties[nameKey] !== "Bob") {
   await graphModule.updateEntity({
@@ -240,7 +242,8 @@ For example, to link an entity to the block entity:
 // link the 'blockEntity' to some 'otherEntity' you have a reference to (e.g. if you have newly created it)
 graphModule.createEntity({
   data: {
-    entityTypeId: "https://blockprotocol.org/@blockprotocol/types/entity-type/friend/v/1",
+    entityTypeId:
+      "https://blockprotocol.org/@blockprotocol/types/entity-type/friend/v/1",
     linkData: {
       leftEntity: blockEntity.metadata.recordId.entityId,
       destinationEntityId: otherEntity.metadata.recordId.entityId,
