--- a/apps/site/src/_pages/docs/1_developing-blocks.mdx
+++ b/apps/site/src/_pages/docs/1_developing-blocks.mdx
@@ -259,7 +259,7 @@ whether they are connected to the block entity at all, and far away they are (wh
 
 There are messages for exploring the data available in the embedding application:
 
-- `aggregateEntities` allows you to build a query to filter the entities in the data store.
+- `aggregateEntities` allows you submit a query which filters the entities in the data store.
 
 You can browse the available entities in order to display them, or create links between them.
 
