instructions for block verification

--- a/apps/site/src/_pages/docs/1_developing-blocks.mdx
+++ b/apps/site/src/_pages/docs/1_developing-blocks.mdx
@@ -158,7 +158,7 @@ The four components of a `Subgraph` are:
 - `edges`: connections between things in the graph. For example, a 'link entity' connects it and two other entities via `hasRightEntity`
   and `hasLeftEntity` edges (conceptually, the link entity is in the middle with an entity on its left and on its right)
 - `vertices`: each element of the graph which was encountered when starting from the roots and following the specified `edges`
-to the specified `depths`.
+  to the specified `depths`.
 
 Again, you **probably don't need to worry about this when getting started** – but if you start to work with complex data networks
 made up of many entities with different relationships, the `Subgraph` and knowing how to query it becomes a powerful tool.
@@ -303,6 +303,14 @@ To publish a block on the Hub take the following steps.
 
 You can update your published block at any time by running
 `npm run build && npx blockprotocol@canary publish` or `yarn build && npx blockprotocol@canary publish`
+
+### Have your block verified
+
+In order to have your block enter the queue to be reviewed for verification status, please ensure the `repository`
+field in your `package.json` points to a public repository containing your code, and add a `commit` field to the
+`blockprotocol` object within `package.json` that specifies the commit hash the version you are publishing was built from.
+
+Read more about verification in [the FAQ](https://blockprotocol.org/docs/faq#how-does-block-verification-work).
 
 ### Changing the Hub preview
 
