--- a/apps/site/src/_pages/docs/4_spec/99_rfcs_and_roadmap.mdx
+++ b/apps/site/src/_pages/docs/4_spec/99_rfcs_and_roadmap.mdx
@@ -87,7 +87,7 @@ For in-depth motivation, a proposed implementation plan, and the wide-reaching i
 
 #### Pagination
 
-We intend to move to a cursor-based method for paginating aggregations of entities, likely based on the [Connections](https://relay.dev/graphql/connections.htm) specification.
+We intend to move to a cursor-based method for paginating results of querying entities, likely based on the [Connections](https://relay.dev/graphql/connections.htm) specification.
 
 #### Schema mapping
 
